--- a/transferi/aerodrom-podgorica/index.html
+++ b/transferi/aerodrom-podgorica/index.html
@@ -158,30 +158,38 @@
           <form id="transfer-upit">
             <!-- Date and Time Dropdowns -->
             <div class="date-time-dropdown">
-                <div class="dropdown-date">
-                    <div>
-                        <img src="/images/date-grey.png" alt="Date Icon">
-                    </div>
-                    <div>
-                        <h4>Datum</h4>
-                        <select id="date-select"></select>
-                    </div>
-                </div>
-                <div class="dropdown-time">
-                    <div>
-                        <img src="/images/time-grey.png" alt="Time Icon">
-                    </div>
-                    <div>
-                        <h4>Vrijeme</h4>
-                        <select id="time-select"></select>
-                    </div>
-                </div>
-            </div>
+              <div class="dropdown-date">
+                  <div>
+                      <img src="/images/date-grey.png" alt="Date Icon">
+                  </div>
+                  <div>
+                      <h4>Datum</h4>
+                      <div class="select-wrapper2">
+                          <select id="date-select" class="one">
+                            
+                          </select>
+                      </div>
+                  </div>
+              </div>
+              <div class="dropdown-time">
+                  <div>
+                      <img src="/images/time-grey.png" alt="Time Icon">
+                  </div>
+                  <div>
+                      <h4>Vrijeme</h4>
+                      <div class="select-wrapper2">
+                          <select id="time-select" class="one">
+                              
+                          </select>
+                      </div>
+                  </div>
+              </div>
+          </div>
             <hr class="form-greyline"/>
             <!-- Destination Dropdown -->
-            <div class="dropdown-destination">
+            <div class="dropdown-destination select-wrapper">
                 <h4>Destinacija</h4>
-                <select id="destination-select">
+                <select id="destination-select" class="one">
                     <option value="Kotor">Kotor</option>
                     <option value="Budva">Budva</option>
                     <option value="Ulcinj">Ulcinj</option>
