--- a/rent-a-car/index.html
+++ b/rent-a-car/index.html
@@ -30,7 +30,7 @@
               <li><a class="dark-color" href="/ture/">Ture</a></li>
               <li><a class="dark-color" href="/rent-a-car/">Rent-a-car</a></li>
               <li><a class="dark-color" href="/transferi/">Transferi</a></li>
-              <li><a class="dark-color" href="/vijesti/">Vijesti</a></li>
+              <li><a class="dark-color" href="/blog/">Vijesti</a></li>
               <li>
                 <details>
                   <summary class="dark-color">Jezik/Language</summary>
